[package]
name = "convo-scratchpad"
version = "0.1.0"
authors = ["dhruvdh <dhruv.dhamani@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = {version = "0.13.0", features = []}
itertools = "0.8.0"
rayon = "1.2.0"