[package]
name = "convo-scratchpad"
version = "0.1.0"
authors = ["dhruvdh <dhruv.dhamani@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray =  "0.13.0"
itertools = "0.8.0"
rayon = "1.2.0"
parking_lot = "0.9.0"

[profile.release]
# lto = "thin"
# codegen-units = 1